fix(header): z-index for dropdown

--- a/components/src/components/dropdown/dropdown.scss
+++ b/components/src/components/dropdown/dropdown.scss
@@ -96,6 +96,7 @@
     @include sdds-scrollbar;
 
     position: absolute;
+    z-index: 2;
     top: 100%;
     left: 0;
     min-width: 100%;
